src/objects/KHRLnotes__c.object
<CustomObject>
    <description>Kaiser/Hospital Route List Notes</description>
    <fields>
        <fullName>DivisionCode__c</fullName>
        <label>DivisionCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmpAccountId__c</fullName>
        <label>EmpAccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>KHRLnotes</label>
    <nameField>
        <label>KHRLnotes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KHRLnotes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>